# FoundrOS

./: .gitignore  README.md  main.py  pyproject.toml
docs/: future_improvements.md
docs/adr/: 0001-python-and-tooling.md  0002-architecture-foundations.md
src/foundros/agents/: ceo.py  cfo.py  cto.py  executive.py  investor.py  pm.py
src/foundros/communication/: bus.py
src/foundros/core/base/: base_agent.py
src/foundros/memory/: buffer.py
src/foundros/models/: agent.py  delegation.py  idea.py  message.py  project.py  task.py
src/foundros/orchestrator/: runner.py
src/foundros/prompts/: ceo.md  cfo.md  cto.md  investor.md  pm.md
src/foundros/services/: llm.py
tests/: test_agents.py  test_ceo.py  test_core.py  test_orchestrator.py
